Let the beta testing commence!

--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -3,11 +3,12 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd"
          version="3.1">
-    <context-param>
-        <description>Location to store uploaded file</description>
-        <param-name>file-upload</param-name>
-        <param-value>
-            C:\Program Files\apache-tomcat-8.0.24\webapps\data\
-        </param-value>
-    </context-param>
+    <servlet>
+        <servlet-name>upload</servlet-name>
+        <servlet-class>controller.UploadController</servlet-class>
+    </servlet>
+    <servlet-mapping>
+        <servlet-name>upload</servlet-name>
+        <url-pattern>/upload</url-pattern>
+    </servlet-mapping>
 </web-app>
